updated package json with homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bullsandcows-react",
-  "homepage": "https:almedaria.github.io/bullsandcows-react",
+  "homepage": "https://almedaria.github.io/bullsandcows-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
